@@ -1,3 +1,10 @@
+2007-07-25  Richard Hughes  <richard@hughsie.com>
+
+	* src/phonemgr-object.c: (phonemgr_object_register),
+	(phonemgr_object_init):
+	Actually register a bus name so other session dbus clients can
+	connect to a named service.
+
 2007-07-24  Bastien Nocera  <hadess@hadess.net>
 
 	* configure.in: Update gnokii requirements now that 0.6.18
